--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <section id="gallery">
         <div class="section-container">
-            <h1 class="title-top">SKILLS AND EXPERIENCE</h1>
+            <h1 class="title-top">PHOTO GALLERY</h1>
             <div class="box-container">
                 <div class="gal-pic"><img src="Resource/kaku.png" alt=""></div>
                 <div class="gal-pic"><img src="Resource/kaku.png" alt=""></div>
